# fast_zero

./: .gitignore  README.md  pyproject.toml
fast_zero/: app.py  models.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/versions/: 2ad5fe2f31c5_create_users_table.py  d1801e8d6373_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_security.py  test_user.py
